--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </p>
                 <img src="assets/images/face.jpg" alt="human face" class="face-img rounded">
 
-                <div class="default-box settings-box my-4">
+                <div onclick="resize()" id="settings" class="default-box settings-box my-4">
 
                     <div class="settings-header d-flex justify-content-between align-items-center">
                         <div class="head-left d-flex gap-2 align-items-center">
@@ -46,7 +46,7 @@
 
                         </div>
 
-                        <img src="assets/images/arrowDown.svg" alt="">
+                        <img id="dropdown" src="assets/images/arrowDown.svg" alt="">
                     </div>
                     <hr>
                     <div class="settings-main">
@@ -82,6 +82,33 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+        var settingsHead = document.getElementById("adjust");
+        settingsHead.addEventListener(onclick, function () {
+
+        })
+
+
+        function resize() {
+            var settings = document.getElementById("settings");
+            var img = document.getElementById("dropdown");
+
+            var settingH = settings.offsetHeight;
+            // alert(settingH);
+
+            if (settingH != 100) {
+                settings.style.height = "100px";
+                img.src = "assets/images/arrowRight.svg";
+
+            } else {
+                settings.style.height = "200px";
+                img.src = "assets/images/arrowDown.svg";
+
+            }
+
+        }
+    </script>
 </body>
 
 </html>
